Fixed some problems

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
     <button type="button" class="header__btn btn btn__secondary">Learn more</button>
 
+    
     <div class="header__photo photo">
       <p class="header__photo--text">
         <span>Intro</span> <br>
@@ -89,6 +90,7 @@
       </div>
     </div>
   </div>
+  <div class="header__background"></div>
 </header>
 <section class="welcome section" id="about_us">
   <div class="container">
@@ -326,7 +328,7 @@
       cloud beneath.
     </p>
 
-    <button type="submit" class="btn btn-main result__btn">Apply</button>
+    
 
     <div class="result__bg very-small very-small--first-left"></div>
     <div class="result__bg very-small very-small--second-left"></div>
@@ -341,6 +343,8 @@
     <div class="result__bg very-small very-small--second-right"></div>
     <div class="result__bg standard standard--first-right"></div>
     <div class="result__bg standard standard--second-right"></div>
+
+    <button type="submit" class="btn btn-main result__btn">Apply</button>
 
   </div>
 </section>
@@ -427,3 +431,4 @@
 </footer>
 </body>
 </html>
+
