--- a/index.html
+++ b/index.html
@@ -15,39 +15,38 @@
   <div class="container">
     <nav>
       <div class="header__logo">
-        <a class="header__logo--link" href="#">
+        <a class="header__logo--link" href="./index.html">
           Dia
         </a>
       </div>
 
-
       <ul class="header__main-menu main-menu">
-        <li class="main-menu__item">
-          <a href="./index.html">
-            Home
-          </a>
-        </li>
-        <li class="main-menu__item">
-          <a href="#about_us">
-            About Us
-          </a></li>
-        <li class="main-menu__item">
-          <a href="#services">
-            Services
-          </a></li>
-        <li class="main-menu__item">
-          <a href="#work">
-            Work
-          </a></li>
-        <li class="main-menu__item">
-          <a href="#contacts">
-            Contact Us
-          </a></li>
-        <li class="main-menu__item">
-          <a href="#footer">
-            Hire Us
-          </a></li>
-      </ul>
+          <li class="main-menu__item">
+            <a href="#">
+              Home
+            </a>
+          </li>
+          <li class="main-menu__item">
+            <a href="#about_us">
+              About Us
+            </a></li>
+          <li class="main-menu__item">
+            <a href="#services">
+              Services
+            </a></li>
+          <li class="main-menu__item">
+            <a href="#work">
+              Work
+            </a></li>
+          <li class="main-menu__item">
+            <a href="#contacts">
+              Contact Us
+            </a></li>
+          <li class="main-menu__item">
+            <a href="#footer">
+              Hire Us
+            </a></li>
+        </ul>
     </nav>
 
     <h1 class="header__title">
@@ -61,7 +60,7 @@
 
     <button type="button" class="header__btn btn btn__secondary">Learn more</button>
 
-    
+
     <div class="header__photo photo">
       <p class="header__photo--text">
         <span>Intro</span> <br>
@@ -81,12 +80,16 @@
       </div>
 
       <div class="photo__slider">
-        <a href="#" class="photo__slider--left slider-part">
-          <i class="fas fa-chevron-left arrow"></i>
-        </a>
-        <a href="#" class="photo__slider--right slider-part">
-          <i class="fas fa-chevron-right arrow"></i>
-        </a>
+        <div class="photo__slider--left">
+          <a href="#" class="slider-part">
+            <i class="fas fa-chevron-left arrow"></i>
+          </a>
+        </div>
+        <div class="photo__slider--right">
+          <a href="#" class="slider-part"d>
+            <i class="fas fa-chevron-right arrow"></i>
+          </a>
+        </div>
       </div>
     </div>
   </div>
@@ -167,40 +170,42 @@
       </p>
     </div>
 
-    <div class="process__step process__step--first">
-      <div class="process__step--ellipse"></div>
+    <div class="process__steps">
+      <div class="process__step process__step--first">
+        <div class="process__step--ellipse"></div>
 
-      <div class="process__step--number">1</div>
+        <div class="process__step--number">1</div>
 
-      <div class="process__step--description">
-        By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside.
+        <div class="process__step--description">
+          By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside.
+        </div>
       </div>
-    </div>
-    <div class="process__step process__step--secondary">
-      <div class="process__step--ellipse"></div>
+      <div class="process__step process__step--secondary">
+        <div class="process__step--ellipse"></div>
 
-      <div class="process__step--number">2</div>
+        <div class="process__step--number">2</div>
 
-      <div class="process__step--description">
-        By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside.
+        <div class="process__step--description">
+          By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside.
+        </div>
       </div>
-    </div>
-    <div class="process__step process__step--thirdly">
-      <div class="process__step--ellipse"></div>
+      <div class="process__step process__step--thirdly">
+        <div class="process__step--ellipse"></div>
 
-      <div class="process__step--number">3</div>
+        <div class="process__step--number">3</div>
 
-      <div class="process__step--description">
-        By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside.
+        <div class="process__step--description">
+          By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside.
+        </div>
       </div>
-    </div>
-    <div class="process__step process__step--last">
-      <div class="process__step--ellipse"></div>
+      <div class="process__step process__step--last">
+        <div class="process__step--ellipse"></div>
 
-      <div class="process__step--number">4</div>
+        <div class="process__step--number">4</div>
 
-      <div class="process__step--description">
-        By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside.
+        <div class="process__step--description">
+          By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside.
+        </div>
       </div>
     </div>
   </div>
@@ -328,7 +333,7 @@
       cloud beneath.
     </p>
 
-    
+
 
     <div class="result__bg very-small very-small--first-left"></div>
     <div class="result__bg very-small very-small--second-left"></div>
