--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link
     href="https://fonts.googleapis.com/css?family=Muli:300,400,700,800,900&display=swap"
     rel="stylesheet">
+  <link rel="icon" href="./images/Dia-32.png" sizes="32x32">
   <link rel="stylesheet" href="./styles/main.css">
   <script src="https://kit.fontawesome.com/264017e1c8.js"></script>
 </head>
